first draft of HMM section

--- a/lokalizom.bib
+++ b/lokalizom.bib
@@ -3574,7 +3574,7 @@ Transferases/antagonists & inhibitors},
 
 @article{1991hofmannmutations,
    author = {Hofmann, Kathryn J. and Schultz, Loren D.},
-   title = {Mutations of the α-galactosidase signal peptide which greatly enhance secretion of heterologous proteins by yeast},
+   title = {Mutations of the $\alpha$-galactosidase signal peptide which greatly enhance secretion of heterologous proteins by yeast},
    journal = {Gene},
    volume = {101},
    number = {1},
@@ -12518,7 +12518,7 @@ Variable width scaled window},
 @article{2012zhengsignalbnf,
    author = {Zheng, Zhi and Chen, Youying and Chen, Liping and Guo, Gongde and Fan, Yongxian and Kong, Xiangzeng},
    title = {Signal-BNF: a Bayesian network fusing approach to predict signal peptides},
-   journal = {Journal of biomedicine & biotechnology},
+   journal = {Journal of biomedicine \& biotechnology},
    volume = {2012},
    pages = {492174},
    abstract = {A signal peptide is a short peptide chain that directs the transport of a protein and has become the crucial vehicle in finding new drugs or reprogramming cells for gene therapy. As the avalanche of new protein sequences generated in the postgenomic era, the challenge of identifying new signal sequences has become even more urgent and critical in biomedical engineering. In this paper, we propose a novel predictor called Signal-BNF to predict the N-terminal signal peptide as well as its cleavage site based on Bayesian reasoning network. Signal-BNF is formed by fusing the results of different Bayesian classifiers which used different feature datasets as its input through weighted voting system. Experiment results show that Signal-BNF is superior to the popular online predictors such as Signal-3L and PrediSi. Signal-BNF is featured by high prediction accuracy that may serve as a useful tool for further investigating many unclear details regarding the molecular mechanism of the zip code protein-sorting system in cells.},
@@ -12604,3 +12604,28 @@ Spectrum Analysis
    year = {1968}
 }
 
+@MISC{Durbin98biologicalsequence,
+    author = {Durbin, R. and Eddy, S. and Krogh, A. and Mitchison, G.},
+    title = {Biological sequence analysis: probabilistic models of proteins and nucleic acids. Cambridge Univ},
+    year = {1998}
+}
+
+@article{Yu2010215,
+title = "Hidden semi-Markov models ",
+journal = "Artificial Intelligence ",
+volume = "174",
+number = "2",
+pages = "215 - 243",
+year = "2010",
+note = "Special Review Issue ",
+issn = "0004-3702",
+doi = "http://dx.doi.org/10.1016/j.artint.2009.11.011",
+url = "http://www.sciencedirect.com/science/article/pii/S0004370209001416",
+author = "Shun-Zheng Yu",
+keywords = "Hidden Markov model (HMM)",
+keywords = "Hidden semi-Markov model (HSMM)",
+keywords = "Explicit duration \{HMM\}",
+keywords = "Variable duration \{HMM\}",
+keywords = "Forward–backward (FB) algorithm",
+keywords = "Viterbi algorithm "
+}
