cvres figure done

--- a/paper.tex
+++ b/paper.tex
@@ -298,7 +298,7 @@ XXX n-grams were further used in the analysis
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.9\textwidth]{figures/cvres.png}
-\caption{Results of cross-validation for 15 best performing amino acid encodings.}
+\caption{Results of cross-validation. 1. An encoding providing the best sensitivity (AUC = 0.9337). 2. A group of encodings with be best sensitivity/specificity ratio (mean AUC = 0.9650). 3. An encoding providing the best specificity (AUC = 0.9686).}
 \label{fig:cvres}
 \end{figure}
 
