minor changes to hsmm section

--- a/lokalizom.bib
+++ b/lokalizom.bib
@@ -12629,3 +12629,11 @@ keywords = "Variable duration \{HMM\}",
 keywords = "Forward–backward (FB) algorithm",
 keywords = "Viterbi algorithm "
 }
+
+@Manual{biogramPackage,
+    author = {Michal Burdukiewicz and Piotr Sobczyk and Chris Lauber},
+    title = {biogram: analysis of biological sequences using n-grams},
+    year = {2015},
+    note = {R package version 1.2},
+    url = {http://CRAN.R-project.org/package=biogram},
+  }
