adding references to paper that use hsmm in bioinformatics

--- a/lokalizom.bib
+++ b/lokalizom.bib
@@ -12637,3 +12637,49 @@ keywords = "Viterbi algorithm "
     note = {R package version 1.2},
     url = {http://CRAN.R-project.org/package=biogram},
   }
+
+  @book{koski2001hidden,
+  title={Hidden Markov Models for Bioinformatics},
+  author={Koski, T.},
+  isbn={9781402001352},
+  lccn={2001053883},
+  series={Computational Biology},
+  url={https://books.google.pl/books?id=-VDqvCaYv4MC},
+  year={2001},
+  publisher={Springer Netherlands}
+}
+
+@Article{16571137,
+AUTHOR = {Aydin, Zafer and Altunbasak, Yucel and Borodovsky, Mark},
+TITLE = {Protein secondary structure prediction for a single-sequence using hidden semi-Markov models},
+JOURNAL = {BMC Bioinformatics},
+VOLUME = {7},
+YEAR = {2006},
+NUMBER = {1},
+PAGES = {178},
+URL = {http://www.biomedcentral.com/1471-2105/7/178},
+DOI = {10.1186/1471-2105-7-178},
+PubMedID = {16571137},
+ISSN = {1471-2105},
+ABSTRACT = {BACKGROUND:The accuracy of protein secondary structure prediction has been improving steadily towards the 88% estimated theoretical limit. There are two types of prediction algorithms: Single-sequence prediction algorithms imply that information about other (homologous) proteins is not available, while algorithms of the second type imply that information about homologous proteins is available, and use it intensively. The single-sequence algorithms could make an important contribution to studies of proteins with no detected homologs, however the accuracy of protein secondary structure prediction from a single-sequence is not as high as when the additional evolutionary information is present.RESULTS:In this paper, we further refine and extend the hidden semi-Markov model (HSMM) initially considered in the BSPSS algorithm. We introduce an improved residue dependency model by considering the patterns of statistically significant amino acid correlation at structural segment borders. We also derive models that specialize on different sections of the dependency structure and incorporate them into HSMM. In addition, we implement an iterative training method to refine estimates of HSMM parameters. The three-state-per-residue accuracy and other accuracy measures of the new method, IPSSP, are shown to be comparable or better than ones for BSPSS as well as for PSIPRED, tested under the single-sequence condition.CONCLUSIONS:We have shown that new dependency models and training methods bring further improvements to single-sequence protein secondary structure prediction. The results are obtained under cross-validation conditions using a dataset with no pair of sequences having significant sequence similarity. As new sequences are added to the database it is possible to augment the dependency structure and obtain even higher accuracy. Current and future advances should contribute to the improvement of function prediction for orphan proteins inscrutable to current similarity search methods.},
+}
+
+@INPROCEEDINGS{7043102,
+author={Pimentel, M.A. and Santos, M.D. and Springer, D.B. and Clifford, G.D.},
+booktitle={Computing in Cardiology Conference (CinC), 2014},
+title={Hidden semi-Markov model-based heartbeat detection using multimodal data and signal quality indices},
+year={2014},
+month={Sept},
+pages={553-556},
+keywords={electrocardiography;haemodynamics;hidden Markov models;medical signal detection;medical signal processing;photoplethysmography;wavelet transforms;ABP;ECG;F1-score based signal quality indices;Physionet;arterial blood pressure;automatic heartbeat detection;automatic heartbeat detector;bedside monitors;electrocardiography;hidden semiMarkov model-based heartbeat detection;multimodal data;pathological conditions;photoplethysmogram waveforms;physiological signals;signal quality indices;wavelet transform features;Biomedical monitoring;Databases;Electrocardiography;Heart beat;Hidden Markov models;Training},
+ISSN={2325-8861},}
+
+@ARTICLE{Pachter02applicationsof,
+    author = {Lior Pachter and Marina Alexandersson and Simon Cawley},
+    title = {Applications of generalized pair hidden Markov models to alignment and gene finding problems},
+    journal = {J. Comput. Biol},
+    year = {2002},
+    volume = {9},
+    pages = {389--399}
+}
+
